@@ -2,6 +2,7 @@
 
 	* socket.d (resolve_host): use UI_to_LEbytes() instead of I_to_uint32()
 	for uint32 argument so that it will work on big-endian machines
+	* modules/rawsock/rawsock.c (RAWSOCK:CONVERT-ADDRESS): ditto
 
 2006-07-26  Sam Steingold  <sds@podval.org>
 
